--- a/wangye.html
+++ b/wangye.html
@@ -119,7 +119,7 @@
             <p class="mb-6 text-gray-700">使用SnowNLP库分析168条视频标题的情感倾向，结果显示超70%的标题具有积极情感。</p>
             
             <div class="rounded-lg overflow-hidden shadow-md mb-6 image-hover">
-              <img src="https://picsum.photos/seed/title-sentiment/1200/600" alt="标题情感倾向分布图" class="w-full h-auto">
+              <img src="情感分布.png" alt="标题情感倾向分布图" class="w-full h-auto">
             </div>
             
             <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-8">
