--- a/wangye.html
+++ b/wangye.html
@@ -179,7 +179,8 @@
             <p class="mb-6 text-gray-700">对1500条评论进行分词和词频统计，展示用户讨论的核心焦点。</p>
             
             <div class="rounded-lg overflow-hidden shadow-md mb-6 image-hover">
-              <img src="苏超评论词云图.png" alt="评论高频关键词分布图" class="w-full h-auto">
+              <img src="苏超高频词柱状图.png" alt="评论高频词柱状图" class="w-full h-auto">
+              <img src="苏超评论词云图.png" alt="评论关键词分布图" class="w-full h-auto">
             </div>
             
             <div class="bg-blue-50 p-4 rounded-lg border border-blue-100 mt-6">
